--- a/assets/css/sow.css
+++ b/assets/css/sow.css
@@ -24,7 +24,7 @@
 
 /* NAVBAR ---------------------------- */
 .navbar {
-  position: fixed;
+  /* position: fixed;
   top: 0;
   width: 100%;
   background-color: white;
@@ -33,48 +33,139 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  z-index: 1000; */
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  padding: 0 100px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 1000;
 }
 
 .menu {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   gap: 4rem;
   margin: 0;
   padding: 0;
   align-items: center;
+  list-style: none; */
+
+  /* position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  gap: 32px;
+  height: 100px;
+  background-color: white; 
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  z-index: 1000;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 0 20px; */
+  display: flex;
+  justify-content: center;
+  gap: 4rem;
   list-style: none;
-  /* margin-left: auto; */
 }
 
-.menu a {
-  color: black;
+.menu-show {
+  right: 0;
+}
+
+.menu li {
+  list-style: none;
+}
+
+.menu li a {
   text-decoration: none;
   font-weight: bold;
+  color: black;
+  font-size: 21px;
   transition: color 0.3s;
-}
-.menu a:hover {
-  color: rgb(150, 0, 0);
+  transition: text-decoration 0.3s;
+  position: relative;
 }
 
-/* .menu li a {
-  text-decoration: none;
-  color: black;
-  position: relative;
+.menu li a:after {
+  content: "";
+  position: absolute;
+  background-color: black;
+  height: 3px;
+  width: 0%;
+  left: 0;
+  bottom: -6px;
+  transition: 0.5s;
+}
+
+.menu li a:hover:after {
+  width: 100%;
+}
+
+.burger {
+  /* display: none;
+  font-size: 1.2rem;
+  color: white;
+  cursor: pointer;
+  width: 0%; */
+
+  /* position: absolute;
+  right: 20px;
+  font-size: 26px;
+  cursor: pointer;
+  display: none; */
+
+  display: none;
+  position: absolute;
+  right: 30px;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+/* Menú visible cuando se activa */
+/* #navbar.open > ul {
+  right: 0;
 } */
 
 /* HEADER  ----------------------------*/
 #header {
   width: 100%;
   height: 100vh;
-  top: 0;
-  left: 0;
-  background-image: url(/assets/sow/wallpaper1.jpg);
-  /* background-color: rgb(150, 0, 0); */
-  background-position: center;
-  background-attachment: fixed;
-  overflow: hidden;
+  background-image: url("https://ik.imagekit.io/lnj040m143/Imgs%20Analisis%20Web/wallpaper1.png");
+  background-size: cover;
+  /* overflow: hidden; */
   z-index: -1;
+}
+
+#header img {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+  filter: brightness(0.5);
+}
+
+#header .subtitle-header {
+  font-size: 32px;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  max-width: 60vw;
+  line-height: normal;
+}
+
+h1 {
+  font-size: 120px;
+  margin: 4rem 0 1.5rem 0;
+  text-align: center;
+  /* position: absolute; */
+  /* top: 50%; */
 }
 
 /* HERO  ----------------------------*/
@@ -84,7 +175,6 @@
   align-items: center;
   justify-content: center;
   color: white;
-  /* background: linear-gradient(160deg, #9a0000, #350000); */
   text-align: center;
   padding: 2rem;
 }
@@ -93,18 +183,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  /* padding: 2rem; */
+  position: relative;
 }
+
+.subtitle-header {
+  font-size: 48px;
+  margin-bottom: 1rem;
+}
+
 .hero h2 {
   font-size: 6.6rem;
 }
 
-h1 {
-  font-size: 120px;
-  margin: 4rem 0 1.5rem 0;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-}
 H3 {
   font-size: 56px;
   border-bottom: 1px solid black;
@@ -154,7 +246,7 @@ p strong {
 
 #Dont_Board_Me {
   background-color: #f0f0f0;
-  z-index: 13;
+  z-index: 14;
 }
 
 /* ----- SECCIONES ----- */
@@ -193,6 +285,14 @@ p strong {
   font-size: 120px;
   margin: 4rem 0 1.5rem 0;
   text-align: center;
+}
+
+.Site-introduction h2 a {
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s;
+  transition: text-decoration 0.3s;
+  position: relative;
 }
 
 .users-credits .avatar-name_img {
@@ -281,7 +381,7 @@ p strong {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 530px;
+  min-height: 700px;
   max-height: 80vh;
 }
 .gallery_screenshots .card .cont-img {
@@ -335,14 +435,69 @@ footer {
   font-size: 0.875rem;
   height: 48px;
   padding-left: 100px;
+  padding-top: 6px;
 }
 
 /* Desktop: Layout horizontal completo - 834px+ */
 @media screen and (max-width: 840px) {
+  .navbar {
+    padding: 2rem 100px;
+  }
+
+  .burger {
+    display: block;
+    position: absolute;
+    right: -60%; /* was right: -340px; -> makes it visible */
+    top: 0px;
+  }
+
+  /* target the menu element when it has the menu-show class */
+  .menu.menu-show {
+    right: 0;
+  }
+
+  .menu.menu-show ul {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 32px;
+  }
+
+  .burger i {
+    font-size: 1.5rem;
+    color: black;
+  }
+
+  .menu {
+    position: fixed;
+    top: 80px;
+    right: -100%;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 24px;
+    background-color: white;
+    padding: 40px;
+    transition: all 0.3s ease;
+    z-index: 999;
+  }
+
+  .hero h2 {
+    font-size: 72px;
+  }
+
+  #header .subtitle-header {
+    font-size: 28px;
+    max-width: 60vw;
+  }
+
   p,
   p strong {
     font-size: 18px;
   }
+
   .Site-introduction h2 {
     font-size: 80px;
     margin: 2.5rem 0 1.5rem 0;
@@ -401,8 +556,17 @@ footer {
   }
 }
 
-/* Desktop: Layout horizontal completo - 834px+ */
+/* MOBILE */
 @media screen and (max-width: 440px) {
+  .hero h2 {
+    font-size: 48px;
+  }
+
+  #header .subtitle-header {
+    font-size: 24px;
+    max-width: 60vw;
+  }
+
   p,
   p strong {
     font-size: 16px;
